prevent columns from squeezing when window resolution is too low

--- a/src/css/windows/body-styles.scss
+++ b/src/css/windows/body-styles.scss
@@ -140,6 +140,7 @@ $body-voice-type-font-color: #989898;
 .body-col {
   //margin: 0 2px;
   display: flex;
+  flex-shrink: 0;
   justify-content: center;
   align-items: center;
   height: 18px;
